--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
     </header>
     <main>
         <!-- Add your images here -->
-        <img src="images\1.jpg" alt="Astrophotography Image 1">
-        <img src="images\2.jpg" alt="Astrophotography Image 2">
-        <img src="images\3.jpg" alt="Astrophotography Image 3">
+        <img src="images/1.jpg" alt="Astrophotography Image 1">
+        <img src="images/2.jpg" alt="Astrophotography Image 2">
+        <img src="images/3.jpg" alt="Astrophotography Image 3">
         <!-- Add more images as needed -->
     </main>
     <footer>
