--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
             background-color: #111;
             color: #aaa;
         }
+        p {
+            color: black;
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
@@ -93,7 +97,7 @@
         <!-- Add more images as needed -->
     </main>
     <footer>
-        <p>&copy; 2024 Thomas | Astrophotography</p>
+        <p>&copy; 2024 Thomas | Astrophotography</p><p href="/gear">Gear</p>
     </footer>
 </body>
 </html>
