--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             color: #aaa;
         }
         p {
-            color: black;
+            color: white;
             text-decoration: none;
         }
     </style>
@@ -97,7 +97,7 @@
         <!-- Add more images as needed -->
     </main>
     <footer>
-        <p>&copy; 2024 Thomas | Astrophotography</p><p href="/gear">Gear</p>
+        <p>&copy; 2024 Thomas | Astrophotography</p><a href="/gear"><p">Gear</p></a>
     </footer>
 </body>
 </html>
