--- a/gear.html
+++ b/gear.html
@@ -46,12 +46,25 @@
             background-color: #111;
             color: #aaa;
         }
+        h3 {
+            font-weight: 100;
+        }
+        li {
+            list-style-type: circle;
+        }
     </style>
 </head>
 <body>
     <header>
         <h1>Gear</h1>
-        <h3>----</h3>
+        <h3>Camera: Canon EOS R</h3>
+        <h3>Tracker: None (yet)</h3>
+        <h3>Lenses: </h3>
+        <ul>
+            <li>Samyang 14mm f/1,8</li>
+            <li>Canon 70-300mm f/4-5,6</li>
+            <li>Canon 50mm f/2,8</li>
+        </ul>
     </header>
     <main>
         
